--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build-main": "cross-env NODE_ENV=production webpack --config webpack.main.prod.config.js",
     "build-renderer": "cross-env NODE_ENV=production webpack --config webpack.renderer.prod.config.js",
     "build": "npm run build-main && npm run build-renderer",
+    "build-web": "npm run build-renderer",
+    "start-web-dev": "webpack-dev-server --config webpack.web.dev.config.js",
     "start-renderer-dev": "webpack-dev-server --config webpack.renderer.dev.config.js",
     "start-main-dev": "webpack --config webpack.main.config.js && electron ./dist/main.js",
     "start-dev": "cross-env START_HOT=1 npm run start-renderer-dev",
