chore: update meta

--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
   },
   "author": {
     "name": "Garfield Zhu (AlohaYo)",
-    "email": "Garfield.bupt@microstrategy.com"
+    "email": "Garfield.bupt@gmail.com"
   },
   "license": "MIT",
   "bugs": {
